# reth-desktop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  metrics.txt
src/: config.rs  installer.rs  main.rs  metrics.rs  reth_node.rs  settings.rs  system_check.rs  theme.rs
src/ui/: desktop_settings.rs  mod.rs  node_settings.rs  start_config.rs
