[package]
name = "reth-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.25.0"
egui = "0.25.0"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
flate2 = "1.0"
tar = "0.4"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
